backend/ruby/enum and date time/enum.txt
qwinix@qt:~$ irb
irb(main):001:0> a=["aa","bb","cc","dd"]
=> ["aa", "bb", "cc", "dd"]
irb(main):002:0> a.sort
=> ["aa", "bb", "cc", "dd"]
irb(main):003:0> a[0]="ss"
=> "ss"
irb(main):004:0> a
=> ["ss", "bb", "cc", "dd"]
irb(main):005:0> a.sort
=> ["bb", "cc", "dd", "ss"]
irb(main):006:0> a.take_whie{|i| i<3}
NoMethodError: undefined method `take_whie' for ["ss", "bb", "cc", "dd"]:Array
	from (irb):6
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):007:0> a.take_whie{|i| i<3}
NoMethodError: undefined method `take_whie' for ["ss", "bb", "cc", "dd"]:Array
	from (irb):7
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):008:0> a=[1..7]
=> [1..7]
irb(main):009:0> a
=> [1..7]
irb(main):010:0> a=[1,2,3,4,5,6,7,8]
=> [1, 2, 3, 4, 5, 6, 7, 8]
irb(main):011:0> a.take_whie{|i| i<3}
NoMethodError: undefined method `take_whie' for [1, 2, 3, 4, 5, 6, 7, 8]:Array
	from (irb):11
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):012:0> a.take_whie{|i| i<1}
NoMethodError: undefined method `take_whie' for [1, 2, 3, 4, 5, 6, 7, 8]:Array
	from (irb):12
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):013:0> a.take_whie{|i| i<3}
NoMethodError: undefined method `take_whie' for [1, 2, 3, 4, 5, 6, 7, 8]:Array
	from (irb):13
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):014:0> a
=> [1, 2, 3, 4, 5, 6, 7, 8]
irb(main):015:0> a.take_whie{|i| i<3}
NoMethodError: undefined method `take_whie' for [1, 2, 3, 4, 5, 6, 7, 8]:Array
	from (irb):15
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):016:0> a
=> [1, 2, 3, 4, 5, 6, 7, 8]
irb(main):017:0> a.take_whie{|i| i<3}
NoMethodError: undefined method `take_whie' for [1, 2, 3, 4, 5, 6, 7, 8]:Array
	from (irb):17
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):018:0> a.take_while{|i| i<3}
=> [1, 2]
irb(main):019:0> (1..8).to_a
=> [1, 2, 3, 4, 5, 6, 7, 8]
irb(main):020:0> (1..8).to_h
TypeError: wrong element type Fixnum (expected array)
	from (irb):20:in `each'
	from (irb):20:in `to_h'
	from (irb):20
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):021:0> %i[hello world].each_with_index.to_h
=> {:hello=>0, :world=>1}
irb(main):022:0> %i[hello world]
=> [:hello, :world]
irb(main):023:0> %i[hello world].to_h
TypeError: wrong element type Symbol at 0 (expected array)
	from (irb):23:in `to_h'
	from (irb):23
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):024:0> cat=["tiger","jaguar","cheetah","leopard","lion","bull","elephant","rabbit",]
=> ["tiger", "jaguar", "cheetah", "leopard", "lion", "bull", "elephant", "rabbit"]
irb(main):025:0> cats.group_by{|cat|cat.length}
NameError: undefined local variable or method `cats' for main:Object
	from (irb):25
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):026:0> cats.group_by{|cat| cat.length}
NameError: undefined local variable or method `cats' for main:Object
	from (irb):26
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):027:0> cat.group_by{|cat| cat.length}
=> {5=>["tiger"], 6=>["jaguar", "rabbit"], 7=>["cheetah", "leopard"], 4=>["lion", "bull"], 8=>["elephant"]}
irb(main):028:0> cat.group_by{|bhu| bhu.length}
=> {5=>["tiger"], 6=>["jaguar", "rabbit"], 7=>["cheetah", "leopard"], 4=>["lion", "bull"], 8=>["elephant"]}
irb(main):029:0> cat
=> ["tiger", "jaguar", "cheetah", "leopard", "lion", "bull", "elephant", "rabbit"]
irb(main):030:0> cat.each_with_index_do|value,index|
irb(main):031:0* puts"#{index}:#{value}"
SyntaxError: (irb):30: syntax error, unexpected ',', expecting end-of-input
cat.each_with_index_do|value,index|
                             ^
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):032:0> cat.each_with_index_do|value index|
irb(main):033:0* puts"#{index}:#{value}"
SyntaxError: (irb):32: syntax error, unexpected tIDENTIFIER, expecting keyword_do or '{' or '('
cat.each_with_index_do|value index|
                                  ^
(irb):33: syntax error, unexpected tSTRING_BEG, expecting keyword_do or '{' or '('
puts"#{index}:#{value}"
     ^
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):034:0> cat.each_with_index_do|value, index|
irb(main):035:0* puts"#{index}:#{value}"
SyntaxError: (irb):34: syntax error, unexpected ',', expecting end-of-input
cat.each_with_index_do|value, index|
                             ^
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):036:0> cat
=> ["tiger", "jaguar", "cheetah", "leopard", "lion", "bull", "elephant", "rabbit"]
irb(main):037:0> cat.each_with_index do|value, index|
irb(main):038:1* puts"#{index}:#{value}"
irb(main):039:1> end
0:tiger
1:jaguar
2:cheetah
3:leopard
4:lion
5:bull
6:elephant
7:rabbit
=> ["tiger", "jaguar", "cheetah", "leopard", "lion", "bull", "elephant", "rabbit"]
irb(main):040:0> cat.each_with_index do|value|
irb(main):041:1* puts"#{value}"
irb(main):042:1> end
tiger
jaguar
cheetah
leopard
lion
bull
elephant
rabbit
=> ["tiger", "jaguar", "cheetah", "leopard", "lion", "bull", "elephant", "rabbit"]
irb(main):043:0> cat.each_with_index do|i|
irb(main):044:1* puts"#{i}"
irb(main):045:1> end
tiger
jaguar
cheetah
leopard
lion
bull
elephant
rabbit
=> ["tiger", "jaguar", "cheetah", "leopard", "lion", "bull", "elephant", "rabbit"]
irb(main):046:0> end
SyntaxError: (irb):46: syntax error, unexpected keyword_end
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):047:0> Time.new
=> 2016-09-28 10:36:23 +0530
irb(main):048:0> time.new
NameError: undefined local variable or method `time' for main:Object
	from (irb):48
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):049:0> Time.new(1994,4,22,7,28,25)
=> 1994-04-22 07:28:25 +0530
irb(main):050:0> time.at
NameError: undefined local variable or method `time' for main:Object
	from (irb):50
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):051:0> time.at(5545134414314)
NameError: undefined local variable or method `time' for main:Object
	from (irb):51
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):052:0> time.at(5545134)
NameError: undefined local variable or method `time' for main:Object
	from (irb):52
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):053:0> t=time.now
NameError: undefined local variable or method `time' for main:Object
	from (irb):53
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):054:0> t=time.new
NameError: undefined local variable or method `time' for main:Object
	from (irb):54
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):055:0> t=Time.new
=> 2016-09-28 10:46:00 +0530
irb(main):056:0> t.to
NoMethodError: undefined method `to' for 2016-09-28 10:46:00 +0530:Time
	from (irb):56
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):057:0> t.to_i
=> 1475039760
irb(main):058:0> x=t.to_i
=> 1475039760
irb(main):059:0> Time.at(x)
=> 2016-09-28 10:46:00 +0530
irb(main):060:0> t=Time.new
=> 2016-09-28 10:47:57 +0530
irb(main):061:0> t.monday?
=> false
irb(main):062:0> t.sumday?
NoMethodError: undefined method `sumday?' for 2016-09-28 10:47:57 +0530:Time
	from (irb):62
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):063:0> t.sunday?
=> false
irb(main):064:0> t.wednesday?
=> true
irb(main):065:0> t.year
=> 2016
irb(main):066:0> t.dst
NoMethodError: undefined method `dst' for 2016-09-28 10:47:57 +0530:Time
	from (irb):66
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):067:0> t.dst?
=> false
irb(main):068:0> t+ (60*60*24*365))
SyntaxError: (irb):68: syntax error, unexpected ')', expecting end-of-input
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):069:0> t+ (60*60*24*365)
=> 2017-09-28 10:47:57 +0530
irb(main):070:0> t+ (6*60*24*365)
=> 2016-11-03 22:47:57 +0530
irb(main):071:0> t+ (6*60*2*365)
=> 2016-10-01 11:47:57 +0530
irb(main):072:0>  (6*60*2*365)
=> 262800
irb(main):073:0> t=262800
=> 262800
irb(main):074:0> Time.at(t)
=> 1970-01-04 06:30:00 +0530
irb(main):075:0> x1=Time.new(2000)
=> 2000-01-01 00:00:00 +0530
irb(main):076:0> x2=Time.new(2001)
=> 2001-01-01 00:00:00 +0530
irb(main):077:0> t1==t2
NameError: undefined local variable or method `t1' for main:Object
	from (irb):77
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):078:0> t1 == t2
NameError: undefined local variable or method `t1' for main:Object
	from (irb):78
	from /home/qwinix/.rbenv/versions/2.2.3/bin/irb:11:in `<main>'
irb(main):079:0> x1==x2
=> false
irb(main):080:0> x1==x1
=> true
irb(main):081:0> x1<x2
=> true
irb(main):082:0> x1>x2
=> false

